--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@react-three/drei": "^8.3.1",
+    "@react-three/fiber": "^7.0.24",
     "animate.css": "^4.1.1",
     "express": "^4.17.2",
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "sass": "^1.45.0"
+    "react-multi-carousel": "^2.6.5",
+    "sass": "^1.45.0",
+    "three": "^0.136.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
