--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "express": "^4.17.2",
     "next": "^12.0.7",
     "react": "^17.0.2",
+    "react-animation-on-scroll": "^2.1.0",
+    "react-countup": "^6.1.0",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.33.1",
     "react-multi-carousel": "^2.6.5",
     "sass": "^1.45.0",
     "three": "^0.136.0"
