--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@react-three/drei": "^8.3.1",
     "@react-three/fiber": "^7.0.24",
+    "TagCloud": "^2.2.0",
     "animate.css": "^4.1.1",
     "express": "^4.17.2",
     "next": "^12.0.7",
